Ajuste de algumas funções

--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
             <span class="btns-escolha d-block">Escolha <button id="btn-par" class="fw-bold">PAR</button> ou <button
                     id="btn-impar" class="fw-bold">IMPAR</button></span>
             <legend>Digite um número de 0 a 9</legend>
-            <input class="escolha-de-numero-usuario" type="number" placeholder="0 ou digite" title="digite um numero"
+            <input class="escolha-de-numero-usuario" type="number" placeholder="0 ou digite" title="digite um numero de 0 a 9 ou deixe em branco para 0"
                 required>
             <input class="btn-enviar fw-bold" type="submit" >
             <h2 class="resultado">Resultado</h2>
         </div>
         <div class="x-ou-o">
-            <span class="d-block">Escolha <button class="fw-bold btn-x btn-info">X</button> ou <button
+            <span class="btns-x-ou-o d-block">Escolha <button id="btn-x" class="fw-bold btn-x btn-info">X</button> ou <button id="btn-o"
                     class="fw-bold btn-O btn-warning">O</button></span>
-            <p>A maquina escolheu X</p>
+            <h2 class="exibe-escolha"></h2>
         </div>
         <div class="area-jogo">
             <table id="table" class="table-bordered d-inline">
